fix: add flow run stats endpoint
