# runtime/apis/flowsapi/list_flows_endpoint.go
@@ -2,6 +2,7 @@ package flowsapi
 
 import (
 	"net/http"
+	"time"
 
 	"github.com/teamkeel/keel/proto"
 	"github.com/teamkeel/keel/runtime/actions"
@@ -67,6 +68,60 @@ func ListFlowsHandler(p *proto.Schema) common.HandlerFunc {
 			})
 		}
 		return common.NewJsonResponse(http.StatusOK, map[string]any{"flows": flowsData}, nil)
+	}
+}
+
+// ListFlowsStatsHandler handles a request to /flows/json/stats and returns stats about the flow runs.
+func ListFlowsStatsHandler(p *proto.Schema) common.HandlerFunc {
+	return func(r *http.Request) common.Response {
+		ctx, span := tracer.Start(r.Context(), "FlowsAPI")
+		defer span.End()
+		span.SetAttributes(
+			attribute.String("api.protocol", "HTTP JSON"),
+		)
+
+		identity, err := actions.HandleAuthorizationHeader(ctx, p, r.Header)
+		if err != nil {
+			return httpjson.NewErrorResponse(ctx, err, nil)
+		}
+		if identity != nil {
+			ctx = auth.WithIdentity(ctx, identity)
+		}
+
+		// handle any Time-Zone headers
+		location, err := locale.HandleTimezoneHeader(ctx, r.Header)
+		if err != nil {
+			return httpjson.NewErrorResponse(ctx, common.NewInputMalformedError(err.Error()), nil)
+		}
+		ctx = locale.WithTimeLocation(ctx, location)
+
+		if r.Method != http.MethodGet {
+			return httpjson.NewErrorResponse(ctx, common.NewHttpMethodNotAllowedError("only HTTP GET accepted"), nil)
+		}
+
+		var before, after *time.Time
+
+		if beforeStr := r.URL.Query().Get("before"); beforeStr != "" {
+			t, err := time.Parse("2006-01-02", beforeStr)
+			if err != nil {
+				return httpjson.NewErrorResponse(ctx, common.NewInputMalformedError(err.Error()), nil)
+			}
+			before = &t
+		}
+		if afterStr := r.URL.Query().Get("after"); afterStr != "" {
+			t, err := time.Parse("2006-01-02", afterStr)
+			if err != nil {
+				return httpjson.NewErrorResponse(ctx, common.NewInputMalformedError(err.Error()), nil)
+			}
+			after = &t
+		}
+
+		stats, err := flows.ListFlowStats(ctx, p, before, after)
+		if err != nil {
+			return httpjson.NewErrorResponse(ctx, err, nil)
+		}
+
+		return common.NewJsonResponse(http.StatusOK, map[string]any{"stats": stats}, nil)
 	}
 }
 
